k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real_time_voting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: real_time_voting
  template:
    metadata:
      labels:
        app: real_time_voting
    spec:
      containers:
        - name: server
          image: 020493826288.dkr.ecr.ap-south-1.amazonaws.com/real_time_voting:latest:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
